# MLOps

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml
notebook/: rent_prediction.ipynb
src/: .env  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  runner.py  runner_builder.py  runner_inference.py
src/config/: db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/pipeline/: collection.py  model.py  preparation.py
