[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Arvin Singh <29691465+arvinsingh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
